--- a/Curso/Módulo 04/ex024/iframe003.html
+++ b/Curso/Módulo 04/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas inventore nobis debitis dolore fugit provident impedit itaque? Inventore sunt aut velit numquam eaque aspernatur tempora autem, distinctio officia, quae quidem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae distinctio similique incidunt fugiat. Officia eaque beatae quisquam a nemo. Ipsum blanditiis eligendi architecto accusantium cupiditate aliquid mollitia voluptas? Neque, at!</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima </h1><p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt aperiam architecto in, sequi hic neque repellat, voluptatum animi officia voluptatibus vel officiis commodi harum, ex saepe? Nulla facere facilis itaque! </p>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
